[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -135.0
margin_bottom = -86.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEasy" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = 90.0
margin_right = 132.5
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "Start (easy)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNormal" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = 165.0
margin_right = 154.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Start (normal)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.259
one_shot = true

[connection signal="pressed" from="ButtonEasy" to="." method="_on_Button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="ButtonNormal" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
